--- a/navigation/train.html
+++ b/navigation/train.html
@@ -78,27 +78,27 @@
                     </div>
                     <div class="container__train__coach__img">
                         <div class="container__train__coach__img__items container__train__coach__img1">
-                            <img src="../img/services/img_cua_tu/img1.jpg" alt="">
+                            <img src="../img/services/coach/img1.jpg" alt="">
                             <p>Ryan Long Fitness</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img2">
-                            <img src="../img/services/img_cua_tu/img2.jpg">
+                            <img src="../img/services/coach/img2.jpg">
                             <p>An Nguyen Fitness</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img3">
-                            <img src="../img/services/img_cua_tu/img3.jpg" alt="">
+                            <img src="../img/services/coach/img3.jpg" alt="">
                             <p>Shin Phamm</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img4">
-                            <img src="../img/services/img_cua_tu/img4.jpg" alt="">
+                            <img src="../img/services/coach/img4.jpg" alt="">
                             <p>KDash Workout</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img5">
-                            <img src="../img/services/img_cua_tu/img5.jpg" alt="">
+                            <img src="../img/services/coach/img5.jpg" alt="">
                             <p>Trang Lê</p>
                         </div>
                         <div class="container__train__coach__img__items container__train__coach__img5">
-                            <img src="../img/services/img_cua_tu/img6.jpg" alt="">
+                            <img src="../img/services/coach/img6.jpg" alt="">
                             <p>Bùi Thạch Thảo</p>
                         </div>
                     </div>
@@ -111,43 +111,43 @@
                     </div>
                     <div class="container__train__yoga__img">
                         <div class="container__train__yoga__img__items container__train__yoga__img1">
-                            <img src="../img/services/img_cua_tu/yoga/img1.jpg" alt="">
+                            <img src="../img/services/yoga/img1.jpg" alt="">
                             <p>HATHA YOGA</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img2">
-                            <img src="../img/services/img_cua_tu/yoga/img2.jpg">
+                            <img src="../img/services/yoga/img2.jpg">
                             <p>SUN SERIES</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img3">
-                            <img src="../img/services/img_cua_tu/yoga/img7.jpg" alt="">
+                            <img src="../img/services/yoga/img7.jpg" alt="">
                             <p>MOON SERIES</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img4">
-                            <img src="../img/services/img_cua_tu/yoga/img10.jpg" alt="">
+                            <img src="../img/services/yoga/img10.jpg" alt="">
                             <p>STATIC YOGA</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img4">
-                            <img src="../img/services/img_cua_tu/yoga/img5.jpg" alt="">
+                            <img src="../img/services/yoga/img5.jpg" alt="">
                             <p>POWER YOGA</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img4">
-                            <img src="../img/services/img_cua_tu/yoga/img6.jpg" alt="">
+                            <img src="../img/services/yoga/img6.jpg" alt="">
                             <p>YOGA FLOW</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img4">
-                            <img src="../img/services/img_cua_tu/yoga/img7.jpg" alt="">
+                            <img src="../img/services/yoga/img7.jpg" alt="">
                             <p>VINYASA YOGA</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img4">
-                            <img src="../img/services/img_cua_tu/yoga/img8.jpg" alt="">
+                            <img src="../img/services/yoga/img8.jpg" alt="">
                             <p>CORE STRENGTH</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img4">
-                            <img src="../img/services/img_cua_tu/yoga/img9.jpg" alt="">
+                            <img src="../img/services/yoga/img9.jpg" alt="">
                             <p>BALANCING YOGA</p>
                         </div>
                         <div class="container__train__yoga__img__items container__train__yoga__img4">
-                            <img src="../img/services/img_cua_tu/yoga/img10.jpg">
+                            <img src="../img/services/yoga/img10.jpg">
                             <p>DYNAMIC YOGA</p>
                         </div>
                     </div>
@@ -163,27 +163,27 @@
                     </div>
                     <div class="container__train__group__img">
                         <div class="container__train__group__img__items container__train__group__img1">
-                            <img src="../img/services/img_cua_tu/group/img1.jpg" alt="">
+                            <img src="../img/services/group/img1.jpg" alt="">
                             <p>BODYPUMP</p>
                         </div>
                         <div class="container__train__group__img__items container__train__group__img2">
-                            <img src="../img/services/img_cua_tu/group/img2.jpg">
+                            <img src="../img/services/group/img2.jpg">
                             <p>BODY COMBAT</p>
                         </div>
                         <div class="container__train__group__img__items container__train__group__img3">
-                            <img src="../img/services/img_cua_tu/group/img3.jpg" alt="">
+                            <img src="../img/services/group/img3.jpg" alt="">
                             <p>BODY BANLANCE</p>
                         </div>
                         <div class="container__train__group__img__items container__train__group__img4">
-                            <img src="../img/services/img_cua_tu/group/img4.jpg" alt="">
+                            <img src="../img/services/group/img4.jpg" alt="">
                             <p>RPM</p>
                         </div>
                         <div class="container__train__group__img__items container__train__group__img5">
-                            <img src="../img/services/img_cua_tu/group/img5.jpg" alt="">
+                            <img src="../img/services/group/img5.jpg" alt="">
                             <p>BODYJAM</p>
                         </div>
                         <div class="container__train__group__img__items container__train__group__img5">
-                            <img src="../img/services/img_cua_tu/group/img6.jpg" alt="">
+                            <img src="../img/services/group/img6.jpg" alt="">
                             <p>CX-WORK</p>
                         </div>
                     </div>
