--- a/navigation/informationItem.html
+++ b/navigation/informationItem.html
@@ -199,7 +199,7 @@
                                     </span>
                                 </div>
                                 <div class="product__detail__time-use">
-                                    <span class="product__detail__time-use__title">
+                                    <span class="product__detail__title">
                                         Hạn sử dụng:
                                     </span>
                                     <span class="product__detail__time-use__text">08/2024</span>
