--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -106,7 +106,16 @@
             <div class="container__select">
                 <div class="container__colum1">
                     <div class="container__colum1__inner">
-                        đawdwdwdawdw
+                        <div class="container__colum1__inner__select">
+                            <div class="happy__newyear">
+                                <a href="#">
+                                    MỪNG TẾT GIÁP THÌN
+                                </a>
+                                <span>
+                                    2024
+                                </span>
+                            </div>
+                        </div>
                     </div>
                     <div class="container__colum1__inner2">
                         đawdawdwdwdwdw
@@ -117,7 +126,57 @@
                         dăddwadwdawđ
                     </div>
                     <div class="container__colum2__inner2">
-                        adwadawdawdadw
+                        <div class="container__colum2__inner2__select">
+                            <div class="text__box">
+                                <a href="#">
+                                    DANH SÁCH QUÀ TẶNG
+                                </a>
+                            </div>
+                            <div class="list__gift">
+                                <a href="#">
+                                    <i class='bx bxs-gift'></i>
+                                    <span>
+                                        Tặng 2 tháng tập miễn phí
+                                    </span>
+                                </a>
+                                <a href="#">
+                                    <i class='bx bxs-gift'></i>
+                                    <span>
+                                        Tặng 1 tháng tập luyện miễn phí
+                                    </span>
+                                </a>
+                                <a href="#">
+                                    <i class='bx bxs-gift'></i>
+                                    <span>
+                                        Tặng 2 buổi tập HLV cá nhân
+                                    </span>
+                                </a>
+                                <a href="#">
+                                    <i class='bx bxs-gift'></i>
+                                    <span>
+                                        Tặng túi LV cao cấp hàng quảng châu
+                                    </span>
+                                </a>
+                                <a href="#">
+                                    <i class='bx bxs-gift'></i>
+                                    <span>
+                                        Tặng túi tập thể thao hàng chợ Thái
+                                    </span>
+                                </a>
+                                <a href="#">
+                                    <i class='bx bxs-gift'></i>
+                                    <span>
+                                        Tặng bình nước nước 20L uống cho đã
+                                    </span>
+                                </a>
+                                <a href="#">
+                                    <i class='bx bxs-gift'></i>
+                                    <span>
+                                        Tặng Người Yêu
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
