--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -133,46 +133,46 @@
                                 </a>
                             </div>
                             <div class="list__gift">
-                                <a href="#">
+                                <a class="vip__gift" href="#">
                                     <i class='bx bxs-gift'></i>
                                     <span>
-                                        Tặng 2 tháng tập miễn phí
+                                        Tặng Người Yêu, có rồi cũng tặng
                                     </span>
                                 </a>
                                 <a href="#">
                                     <i class='bx bxs-gift'></i>
                                     <span>
-                                        Tặng 1 tháng tập luyện miễn phí
+                                        Tặng 2 tháng tập mất phí
                                     </span>
                                 </a>
                                 <a href="#">
                                     <i class='bx bxs-gift'></i>
                                     <span>
-                                        Tặng 2 buổi tập HLV cá nhân
+                                        Tặng 1 tháng tập luyện mất phí
                                     </span>
                                 </a>
                                 <a href="#">
                                     <i class='bx bxs-gift'></i>
                                     <span>
-                                        Tặng túi LV cao cấp hàng quảng châu
+                                        Tặng 2 buổi tập cùng PT TIẾN BỊP
                                     </span>
                                 </a>
                                 <a href="#">
                                     <i class='bx bxs-gift'></i>
                                     <span>
-                                        Tặng túi tập thể thao hàng chợ Thái
+                                        Tặng túi LV cao cấp hàng CHỢ
                                     </span>
                                 </a>
                                 <a href="#">
                                     <i class='bx bxs-gift'></i>
                                     <span>
-                                        Tặng bình nước nước 20L uống cho đã
+                                        Tặng túi tập thể thao hàng CHỢ
                                     </span>
                                 </a>
                                 <a href="#">
                                     <i class='bx bxs-gift'></i>
                                     <span>
-                                        Tặng Người Yêu
+                                        Tặng bình nước lọc 20L
                                     </span>
                                 </a>
                             </div>
