--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
                                 <div class="containt">
-                                    <a href="#">THẺ HỘI VIÊN</a>
+                                    <a href="./navigation/card.html">THẺ HỘI VIÊN</a>
                                     <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./navigation/chatbox.html">CHAT ONLINE</a>
@@ -75,6 +75,7 @@
                             </div>
                             <a href="./index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
                             <a href="./navigation/shop.html"><i class='bx bx-world'></i>DIỄN ĐÀN</a>
+                            <a href="./navigation/card.html"><i class='bx bx-world'></i>THẺ THÀNH VIÊN</a>
                             <a href="#"><i class='bx bxs-file'></i>DỊCH VỤ</a>
                             <a href="./navigation/promotion.html"><i class='bx bxs-purchase-tag'></i>KHUYẾN MÃI</a>
                             <a href="#"><i class='bx bx-code-alt'></i>TẬP THỬ MIỄN PHÍ</a>
