--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             </div>
                             <a href="./index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
                             <a href="./navigation/shop.html"><i class='bx bx-world'></i>DIỄN ĐÀN</a>
-                            <a href="./navigation/card.html"><i class='bx bx-world'></i>THẺ THÀNH VIÊN</a>
+                            <a href="./navigation/card.html"><i class="fa-solid fa-ticket"></i>THẺ THÀNH VIÊN</a>
                             <a href="#"><i class='bx bxs-file'></i>DỊCH VỤ</a>
                             <a href="./navigation/promotion.html"><i class='bx bxs-purchase-tag'></i>KHUYẾN MÃI</a>
                             <a href="#"><i class='bx bx-code-alt'></i>TẬP THỬ MIỄN PHÍ</a>
