link all file html to header

--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -14,7 +14,8 @@
     <!-- <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css"> -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
-    <link rel="stylesheet" href="../css/truong.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../navigation_css/promotion.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
@@ -27,7 +28,7 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href="">
+                    <a href="../index.html">
                         <h1>GYM<span>Z</span></h1>
                     </a>
                 </div>
@@ -40,10 +41,10 @@
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
                                 <div class="containt">
-                                    <a href="#">THẺ HỘI VIÊN</a>
-                                    <a href="#">HUẤN LUYỆN VIÊN</a>
-                                    <a href="#">CỬA HÀNG WHEY</a>
-                                    <a href="../chatbox.html">CHAT ONLINE</a>
+                                    <a href="./card.html">THẺ HỘI VIÊN</a>
+                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
+                                    <a href="./chatbox.html">CHAT ONLINE</a>
                               </div>
                             </div>
                         </li>
@@ -79,10 +80,28 @@
                                     DIỄN ĐÀN
                                 </span>
                             </a>
-                            <a href="#">
+                            <a href="./card.html">
                                 <i class='bx bxs-file' ></i>
                                 <span class="noidung__text1">
-                                    DỊCH VỤ
+                                    THẺ HỘI VIÊN
+                                </span>
+                            </a>
+                            <a href="./train.html">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    HUẤN LUYỆN VIÊN
+                                </span>
+                            </a>
+                            <a href="./shop.html">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    CỬA HÀNG WHEY
+                                </span>
+                            </a>
+                            <a href="./chatbox.html">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    CHAT ONLINE
                                 </span>
                             </a>
                             <a href="./promotion.html">
@@ -91,7 +110,7 @@
                                     KHUYẾN MÃI
                                 </span>
                             </a>
-                            <a href="#">
+                            <a href="https://facebook.com/lst24">
                                 <i class='bx bx-code-alt' ></i>
                                 <span class="noidung__text1">
                                     TẬP THỬ MIỄN PHÍ
