--- a/navigation/forum.html
+++ b/navigation/forum.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/truong.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../navigation_css/forum.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
@@ -28,7 +28,7 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href="">
+                    <a href="../index.html">
                         <h1>GYM<span>Z</span></h1>
                     </a>
                 </div>
@@ -36,19 +36,19 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a href="../index.html">TRANG CHỦ</a></li>
-                        <li><a href="./forum.html"><span>DIỄN ĐÀN</span></a></li>
+                        <li><a href="./forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
-                                <a href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
+                                <a class="header__inner__navigation__sevice" href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
                                 <div class="containt">
-                                    <a href="#">THẺ HỘI VIÊN</a>
-                                    <a href="#">HUẤN LUYỆN VIÊN</a>
-                                    <a href="#">CỬA HÀNG WHEY</a>
-                                    <a href="../chatbox.html">CHAT ONLINE</a>
-                                </div>
+                                    <a href="./card.html">THẺ HỘI VIÊN</a>
+                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
+                                    <a href="./chatbox.html">CHAT ONLINE</a>
+                              </div>
                             </div>
                         </li>
-                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a href="./promotion.html"><span>KHUYẾN MÃI</span></a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
@@ -57,20 +57,65 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <div class="menuroi">
-                        <a href="#">
-                            <i class='bx bx-menu' ></i>
+                    <div class="bt_dropdown">
+                        <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
+                            <i class='bx bx-menu'></i>
                         </a>
-                        <div class="noidung">
+                        <div class="content">
                             <div class="logo">
-                                <a href="">GYM<span>Z</span></a>
+                                <a class="logo__inner" href="">
+                                    GYM<span>Z</span>
+                                </a>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
-                            <a href="../index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
-                            <a href="./forum.html"><i class='bx bx-world' ></i>DIỄN ĐÀN</a>
-                            <a href="#"><i class='bx bxs-file' ></i>DỊCH VỤ</a>
-                            <a href="./promotion.html"><i class='bx bxs-purchase-tag' ></i>KHUYẾN MÃI</a>
-                            <a href="#"><i class='bx bx-code-alt' ></i>TẬP THỬ MIỄN PHÍ</a>
+                            <a href="../index.html">
+                                <i class='bx bxs-home'></i>
+                                <span class="noidung__text1">
+                                    TRANG CHỦ
+                                </span>
+                            </a>
+                            <a href="./forum.html">
+                                <i class='bx bx-world' ></i>
+                                <span class="noidung__text1">
+                                    DIỄN ĐÀN
+                                </span>
+                            </a>
+                            <a href="./card.html">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    THẺ HỘI VIÊN
+                                </span>
+                            </a>
+                            <a href="./train.html">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    HUẤN LUYỆN VIÊN
+                                </span>
+                            </a>
+                            <a href="./shop.html">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    CỬA HÀNG WHEY
+                                </span>
+                            </a>
+                            <a href="./chatbox.html">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    CHAT ONLINE
+                                </span>
+                            </a>
+                            <a href="./promotion.html">
+                                <i class='bx bxs-purchase-tag' ></i>
+                                <span class="noidung__text1">
+                                    KHUYẾN MÃI
+                                </span>
+                            </a>
+                            <a href="https://facebook.com/lst24">
+                                <i class='bx bx-code-alt' ></i>
+                                <span class="noidung__text1">
+                                    TẬP THỬ MIỄN PHÍ
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -94,6 +139,7 @@
     <div class="nen_mo"></div>
     <script src="./index.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
+    <script src="../navigation_javascript/menuv2.js"></script>
 </body>
 
 </html>
